tests/fixtures/errors/null_body_if_value.z
# null_body_if_value.z -- an if with a null (empty) branch body yields no
# value; binding it is rejected (E0100).

main: function is {
    c: true
    x: if c then null else 5
    print "x=\{x}"
}
